[package]
name = "sparse_features"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive", "string"] }
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
newick = "0.11.0"
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["static", "zlib"] }
serde = { version = "1", features = ["derive"], optional = true }